--- a/kat/kat/media/css/style.css
+++ b/kat/kat/media/css/style.css
@@ -75,7 +75,7 @@ font-family: 'Open Sans', sans-serif;
 
 .container {
 	/*width: 1000px;*/
-  width: 940px;
+  /*width: 940px;*/
   /*height: auto !important;*/
   /*min-height: 100%;*/
   /*height: 100%;*/
@@ -88,11 +88,12 @@ font-family: 'Open Sans', sans-serif;
 .container:after {
 clear: both;
 }
-.logo-container {
+
+.slideshow {
   margin: 0 6px 0;
   /*width: 988px;*/
   width: 100%;
-
+  max-height: 550px;
 }
 
 #footer {
@@ -262,4 +263,29 @@ ul.noindent {
 
 .article-author {
   text-align: right;
+}
+
+@media (max-width: 767px) {
+  body {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+
+  .container {
+    padding-right: 20px;
+    padding-left: 20px;
+
+  }
+}
+
+@media (max-width: 767px) {
+  body {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+
+  .container {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
 }
