--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -10,159 +10,157 @@
       <script src="/media/js/bootstrap-hover-dropdown.js"></script>
 		  {% block head %}{% endblock %}
       <link href="/media/bootstrap/css/bootstrap.css" rel="stylesheet"/>
+      <link rel="stylesheet" href="/media/bootstrap/css/bootstrap-responsive.css">
       <link rel="stylesheet" href="/media/font-awesome/css/font-awesome.min.css">
       <link href="/media/css/jquery.bxslider.css" rel="stylesheet"/>
       <link href="/media/css/style.css" rel="stylesheet" type="text/css">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% load staticfiles %}
 	</head>
 	<body>
-    <script src="/media/bootstrap/js/bootstrap.js"></script>
-      <div class="navbar ">
-        <div class="navbar-inner">
-                <div class="container">
-
-          <ul class="nav">
-            <li ><a href="/">Главная</a></li>
-            <li ><a href="/news/">Новости</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000">Про Спорт</a>
-                <ul class="dropdown-menu">
-                  <li><a href="/faq/">Терминология</a></li>
-{#                  <li><a href="/history/">История</a></li>#}
-{#                  <li><a href="/development/">Развитие</a></li>#}
-{#                  <li><a href="/rules/">Правила</a></li>#}
-                  <li><a href="/articles/">Статьи</a></li>
-                  <li><a href="/literature/">Литература</a></li>
-                </ul>
-            </li>
-            <li class="dropdown"><a href="#"  class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" >Соревнования</a>
-              <ul class="dropdown-menu">
-                <li><a href="/tournament-registration/">Регистрация на Соревнования</a></li>
-                <li><a href="/participants-lists/">Списки участников</a></li>
-{#                <li><a href="/calendar/">Календарь</a></li>#}
-{#                <li><a href="/ranking/">Рейтинг</a></li>#}
-{#                <li><a href="/results/">Результаты</a></li>#}
-{#                <li><a href="/records/">Рекорды</a></li>#}
-{#                <li><a href="/qualifying/">Нормативы</a></li>#}
-              </ul>
-            </li>
-{#            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Организация</a>#}
-{#                 <ul class="dropdown-menu">#}
-{#                    <li><a href="/organization/">Про Нас</a></li>#}
-{#                    <li><a href="/structure/">Структура</a></li>#}
-{#                    <li><a href="/activities/">Деятельность</a></li>#}
-{#                    <li><a href="/events/">События</a></li>#}
-{#                 </ul>#}
-{#            </li>#}
-            <li ><a href="/forum/">Форум</a></li>
-            <li ><a href="/gallery/">Фото</a></li>
-            <li ><a href="/contacts/">Контакты</a></li>
-            <li ><a href="/links/">Ссылки</a></li>
-            {% if user.is_authenticated %}
-              <li><a href="/accounts/logout/">Sign Out</a></li>
-              <li ><p class="navbar-text"">Welcome, {{ user.username }}!</p></li>
-            {% else %}
-              <li><a href="/accounts/signup/">Get account</a></li>
-              <li><a href="/accounts/login/">Sign In</a></li>
-            {% endif %}
-          </ul>
-                <a href="/" class="navbar-brand">
+{#    <script src="/media/bootstrap/js/bootstrap.js"></script>#}
+    <div class="navbar ">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+		        <span class="icon-th-list"></span></a>
+          <a href="/" class="navbar-brand">
 {#                  <img class="center" src="{% static "kat_main_site/Logo7.png" %}" alt="Logo1"/>#}
-                </a>
-                          </div>
+          </a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li ><a href="/">Главная</a></li>
+              <li ><a href="/news/">Новости</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000">Про Спорт</a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/faq/">Терминология</a></li>
+    {#                  <li><a href="/history/">История</a></li>#}
+    {#                  <li><a href="/development/">Развитие</a></li>#}
+    {#                  <li><a href="/rules/">Правила</a></li>#}
+                    <li><a href="/articles/">Статьи</a></li>
+                    <li><a href="/literature/">Литература</a></li>
+                  </ul>
+              </li>
+              <li class="dropdown"><a href="#"  class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" >Соревнования</a>
+                <ul class="dropdown-menu">
+                  <li><a href="/tournament-registration/">Регистрация на Соревнования</a></li>
+                  <li><a href="/participants-lists/">Списки участников</a></li>
+    {#                <li><a href="/calendar/">Календарь</a></li>#}
+    {#                <li><a href="/ranking/">Рейтинг</a></li>#}
+    {#                <li><a href="/results/">Результаты</a></li>#}
+    {#                <li><a href="/records/">Рекорды</a></li>#}
+    {#                <li><a href="/qualifying/">Нормативы</a></li>#}
+                </ul>
+              </li>
+    {#            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Организация</a>#}
+    {#                 <ul class="dropdown-menu">#}
+    {#                    <li><a href="/organization/">Про Нас</a></li>#}
+    {#                    <li><a href="/structure/">Структура</a></li>#}
+    {#                    <li><a href="/activities/">Деятельность</a></li>#}
+    {#                    <li><a href="/events/">События</a></li>#}
+    {#                 </ul>#}
+    {#            </li>#}
+              <li ><a href="/forum/">Форум</a></li>
+              <li ><a href="/gallery/">Фото</a></li>
+              <li ><a href="/contacts/">Контакты</a></li>
+              <li ><a href="/links/">Ссылки</a></li>
+              {% if user.is_authenticated %}
+                <li><a href="/accounts/logout/">Sign Out</a></li>
+                <li ><p class="navbar-text"">Welcome, {{ user.username }}!</p></li>
+              {% else %}
+                <li><a href="/accounts/signup/">Get account</a></li>
+                <li><a href="/accounts/login/">Sign In</a></li>
+              {% endif %}
+            </ul>
+          </div>
         </div>
       </div>
-              <div class="logo-container">
-            <ul class="bxslider noindent">
+    </div>
+
+    <div class="slideshow">
+      <ul class="bxslider noindent">
 {#              <li><img class="center" src="{% static "kat_main_site/Logo1.jpg" %}" alt="Logo1"/></li>#}
 {#              <li><img class="center" src="{% static "kat_main_site/Logo2.jpg" %}" alt="Logo2"/></li>#}
 {#              <li><img class="center" src="{% static "kat_main_site/Logo3.jpg" %}" alt="Logo3"/></li>#}
-              <li><img class="center" src="{% static "kat_main_site/Logo4.jpg" %}" alt="Logo1"/></li>
-              <li><img class="center" src="{% static "kat_main_site/Logo5.jpg" %}" alt="Logo2"/></li>
-              <li><img class="center" src="{% static "kat_main_site/Logo6.jpg" %}" alt="Logo3"/></li>
+        <li><img class="center" src="{% static "kat_main_site/Logo4.jpg" %}" alt="Logo1"/></li>
+        <li><img class="center" src="{% static "kat_main_site/Logo5.jpg" %}" alt="Logo2"/></li>
+        <li><img class="center" src="{% static "kat_main_site/Logo6.jpg" %}" alt="Logo3"/></li>
+      </ul>
+    </div>
 
-            </ul>
-          </div>
-
-        <div class="row-fluid">
-		    </div>
-        <section class="container">
-          <div class="span12">
-            {% block global_content %}{% endblock %}
-          </div>
-{#            <div class="span8">#}
-{#              {% block content %}{% endblock %}#}
-{#            </div>#}
-{#            <div class="span4">#}
-{#                <div class="well">#}
-{#                    Sidebar#}
-{#                </div>#}
-{#            </div>#}
-        <div class="clear"></div>
-        </section>
-          <footer id="footer">
-        <div class="container">
-      <div class="row">
-        <div class="span6 timelineWidget">
-          <h2>Latest Activities</h2>
-          <div class="divider"><span></span></div>
-          <div id="twitterFrame"> <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-timeline twitter-timeline-rendered" style="border: none; max-width: 100%; min-width: 180px;" title="Twitter Timeline" width="460" height="186"></iframe>
-
-          </div>
-        </div>
-        <div class="span3 contactWidget">
-          <h2>Contact us</h2>
-          <div class="divider"><span></span></div>
-          <address>
-          <strong>Little NEKO</strong>
-          <p> <i class="icon-location"></i>&nbsp;77 Mass. Ave., E14/E15<br>
-            Cambridge, MA 02139-4307 USA </p>
-          <p> <i class="icon-phone"></i>&nbsp;615.987.1234 </p>
-          <p> <i class="icon-mail-alt"></i>&nbsp;<a href="mailto:little@little-neko.com">little@little-neko.com</a> </p>
-          </address>
-        </div>
-        <div class="span3 socialWidget">
-          <h2>Follow us</h2>
-          <div class="divider"><span></span></div>
-					<a class="social-network">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-              </span></a>
-          <a class="social-network">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-              </span></a>
-          <a class="social-network">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
-              </span></a>
-          <a class="social-network">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-              </span></a>
-          <a class="social-network">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-              </span></a>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed lectus in turpis consequat pharetra. Nulla velit purus, vestibulum sit amet ultrices eget, ultricies ut massa. Cras ac nulla at arcu vehicula hendrerit. </p>
-        </div>
+    <section class="container">
+    <div class="row-fluid">
+      <div class="span12">
+        {% block global_content %}{% endblock %}
       </div>
-            <div class="row credits">
-                <div class="col-md-12">
-                    <div class="row copyright">
-                        <div class="col-md-12">
-                            © 2013 3PS. All rights reserved. <a href="http://3ps.if.ua">3PS</a>
-                        </div>
+    </div>
+    <div class="clear"></div>
+    </section>
+
+    <footer id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="span6 timelineWidget">
+            <h2>Latest Activities</h2>
+            <div class="divider"><span></span></div>
+            <div id="twitterFrame"> <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-timeline twitter-timeline-rendered" style="border: none; max-width: 100%; min-width: 180px;" title="Twitter Timeline" width="460" height="186"></iframe>
+
+            </div>
+          </div>
+          <div class="span3 contactWidget">
+            <h2>Contact us</h2>
+            <div class="divider"><span></span></div>
+            <address>
+            <strong>Little NEKO</strong>
+            <p> <i class="icon-location"></i>&nbsp;77 Mass. Ave., E14/E15<br>
+              Cambridge, MA 02139-4307 USA </p>
+            <p> <i class="icon-phone"></i>&nbsp;615.987.1234 </p>
+            <p> <i class="icon-mail-alt"></i>&nbsp;<a href="mailto:little@little-neko.com">little@little-neko.com</a> </p>
+            </address>
+          </div>
+          <div class="span3 socialWidget">
+            <h2>Follow us</h2>
+            <div class="divider"><span></span></div>
+            <a class="social-network">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                </span></a>
+            <a class="social-network">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                </span></a>
+            <a class="social-network">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
+                </span></a>
+            <a class="social-network">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                </span></a>
+            <a class="social-network">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                </span></a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed lectus in turpis consequat pharetra. Nulla velit purus, vestibulum sit amet ultrices eget, ultricies ut massa. Cras ac nulla at arcu vehicula hendrerit. </p>
+          </div>
+        </div>
+        <div class="row credits">
+            <div class="col-md-12">
+                <div class="row copyright">
+                    <div class="col-md-12">
+                        © 2013 3PS. All rights reserved. <a href="http://3ps.if.ua">3PS</a>
                     </div>
                 </div>
             </div>
         </div>
+      </div>
     </footer>
 
     </body>
